@@ -1,24 +1,18 @@
 package com.ace.cache.service.impl;
 
-import java.util.Date;
-import java.util.Iterator;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-
 import com.ace.cache.service.IRedisService;
-import org.apache.log4j.Logger;
+import lombok.extern.slf4j.Slf4j;
 import org.joda.time.DateTime;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-
+import redis.clients.jedis.BinaryClient.LIST_POSITION;
 import redis.clients.jedis.Jedis;
 import redis.clients.jedis.JedisPool;
-import redis.clients.jedis.BinaryClient.LIST_POSITION;
 
+import java.util.*;
+@Slf4j
 @Service
 public class RedisServiceImpl implements IRedisService {
-    private static final Logger LOGGER = Logger.getLogger(RedisServiceImpl.class);
 
     @Autowired
     private JedisPool pool;
@@ -31,7 +25,7 @@ public class RedisServiceImpl implements IRedisService {
             jedis = pool.getResource();
             value = jedis.get(key);
         } catch (Exception e) {
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -46,7 +40,7 @@ public class RedisServiceImpl implements IRedisService {
             jedis = pool.getResource();
             value = jedis.keys(pre + "*");
         } catch (Exception e) {
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -60,7 +54,7 @@ public class RedisServiceImpl implements IRedisService {
             jedis = pool.getResource();
             return jedis.set(key, value);
         } catch (Exception e) {
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
             return "0";
         } finally {
             returnResource(pool, jedis);
@@ -77,7 +71,7 @@ public class RedisServiceImpl implements IRedisService {
             jedis.expire(key, time);
             return result;
         } catch (Exception e) {
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
             return "0";
         } finally {
             returnResource(pool, jedis);
@@ -96,9 +90,9 @@ public class RedisServiceImpl implements IRedisService {
                 String keyStr = it.next();
                 jedis.del(keyStr);
             }
-            return new Long(result);
+            return Long.valueOf(result);
         } catch (Exception e) {
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
             return 0L;
         } finally {
             returnResource(pool, jedis);
@@ -112,7 +106,7 @@ public class RedisServiceImpl implements IRedisService {
             jedis = pool.getResource();
             return jedis.del(keys);
         } catch (Exception e) {
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
             return 0L;
         } finally {
             returnResource(pool, jedis);
@@ -128,7 +122,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.append(key, str);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
             return 0L;
         } finally {
             returnResource(pool, jedis);
@@ -144,7 +138,7 @@ public class RedisServiceImpl implements IRedisService {
             return jedis.exists(key);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
             return false;
         } finally {
             returnResource(pool, jedis);
@@ -159,7 +153,7 @@ public class RedisServiceImpl implements IRedisService {
             return jedis.setnx(key, value);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
             return 0L;
         } finally {
             returnResource(pool, jedis);
@@ -175,7 +169,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.setex(key, seconds, value);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -190,7 +184,7 @@ public class RedisServiceImpl implements IRedisService {
             return jedis.setrange(key, offset, str);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
             return 0L;
         } finally {
             returnResource(pool, jedis);
@@ -206,7 +200,7 @@ public class RedisServiceImpl implements IRedisService {
             values = jedis.mget(keys);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -222,7 +216,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.mset(keysvalues);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -238,7 +232,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.msetnx(keysvalues);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -254,7 +248,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.getSet(key, value);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -270,7 +264,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.getrange(key, startOffset, endOffset);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -286,7 +280,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.incr(key);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -302,7 +296,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.incrBy(key, integer);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -319,7 +313,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.decr(key);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -336,7 +330,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.decrBy(key, integer);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -353,7 +347,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.strlen(key);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -370,7 +364,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.hset(key, field, value);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -387,7 +381,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.hsetnx(key, field, value);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -404,7 +398,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.hmset(key, hash);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -421,7 +415,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.hget(key, field);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -438,7 +432,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.hmget(key, fields);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -455,7 +449,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.hincrBy(key, field, value);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -472,7 +466,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.hexists(key, field);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -489,7 +483,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.hlen(key);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -507,7 +501,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.hdel(key, fields);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -524,7 +518,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.hkeys(key);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -541,7 +535,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.hvals(key);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -574,7 +568,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.lpush(key, strs);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -591,7 +585,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.rpush(key, strs);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -608,7 +602,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.linsert(key, where, pivot, value);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -625,7 +619,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.lset(key, index, value);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -642,7 +636,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.lrem(key, count, value);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -659,7 +653,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.ltrim(key, start, end);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -676,7 +670,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.lpop(key);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -693,7 +687,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.rpop(key);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -710,7 +704,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.rpoplpush(srckey, dstkey);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -727,7 +721,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.lindex(key, index);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -744,7 +738,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.llen(key);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -761,7 +755,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.lrange(key, start, end);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -778,7 +772,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.sadd(key, members);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -795,7 +789,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.srem(key, members);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -812,7 +806,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.spop(key);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -829,7 +823,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.sdiff(keys);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -846,7 +840,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.sdiffstore(dstkey, keys);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -863,7 +857,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.sinter(keys);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -880,7 +874,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.sinterstore(dstkey, keys);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -897,7 +891,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.sunion(keys);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -914,7 +908,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.sunionstore(dstkey, keys);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -931,7 +925,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.smove(srckey, dstkey, member);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -948,7 +942,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.scard(key);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -965,7 +959,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.sismember(key, member);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -982,7 +976,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.srandmember(key);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -999,7 +993,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.smembers(key);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -1015,7 +1009,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.zadd(key, score, member);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -1031,7 +1025,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.zrem(key, members);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -1048,7 +1042,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.zincrby(key, score, member);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -1065,7 +1059,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.zrank(key, member);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -1082,7 +1076,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.zrevrank(key, member);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -1099,7 +1093,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.zrevrange(key, start, end);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -1116,7 +1110,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.zrevrangeByScore(key, max, min);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -1133,7 +1127,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.zrevrangeByScore(key, max, min);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -1150,7 +1144,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.zcount(key, min, max);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -1167,7 +1161,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.zcard(key);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -1184,7 +1178,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.zscore(key, member);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -1201,7 +1195,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.zremrangeByRank(key, start, end);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -1218,7 +1212,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.zremrangeByScore(key, start, end);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -1235,7 +1229,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.keys(pattern);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -1251,7 +1245,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.type(key);
         } catch (Exception e) {
 
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -1278,7 +1272,7 @@ public class RedisServiceImpl implements IRedisService {
             jedis = pool.getResource();
             res = new DateTime().plusSeconds(jedis.ttl(key).intValue()).toDate();
         } catch (Exception e) {
-            LOGGER.error(e.getMessage());
+            log.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
